--- a/Tarea #1/centroamerica.html
+++ b/Tarea #1/centroamerica.html
@@ -13,8 +13,8 @@
             <ul>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="./paises/salvador.html">El Salvador</a></li>
-                <li><a href="#">Guatemala</a></li>
-                <li><a href="#">Honduras</a></li>
+                <li><a href="./paises/guatemala.html">Guatemala</a></li>
+                <li><a href="./paises/honduras.html">Honduras</a></li>
                 <li><a href="./paises/nicaragua.html">Nicaragua</a></li>
                 <li><a href="./paises/panama.html">Panama</a></li>
             </ul>
